--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-android:gravity="center"
-    android:padding="32dp"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.fva.asteroides.MainActivity">
+    android:layout_gravity="center"
+    android:padding="32dp">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Asteriodes"
+        android:text="Asteroides"
         android:textSize="24sp"
-        android:layout_marginBottom="32dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="Jugar" />
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:text="jugar"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        tools:layout_editor_absoluteX="32dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Configurar"
-        />
+        android:layout_marginBottom="8dp"
+        android:text="configurar"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
+        tools:layout_editor_absoluteX="32dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Acerca de"
-        />
+        android:layout_marginBottom="8dp"
+        android:text="acerca de"
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        tools:layout_editor_absoluteX="32dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SALIR"
-        />
+        android:layout_marginBottom="104dp"
+        android:text="salir"
+        app:layout_constraintBottom_toBottomOf="parent"
+     />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
