Verificar que valores correctos para las preferencias de usuarios....

--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="preferencias_principal">
+
+    <PreferenceCategory android:key="uno" android:title="Principal">
     <CheckBoxPreference
         android:key="musica"
         android:summary="Se reproduce música de fondo"
@@ -18,25 +20,27 @@
         android:key="fragmentos"
         android:summary="En cuantos trozos se divide un asteroide"
         android:title="Número de Fragmentos" />
-    <PreferenceScreen android:title="Multijugador">
-        <CheckBoxPreference
-            android:key="multijugador"
-            android:summary="Activar modo multijugador"
-            android:title="Multijugador" />
-        <EditTextPreference
-            android:defaultValue="3"
-            android:inputType="number"
-            android:key="jugadores"
-            android:summary="Cuantos jugadores participan de la partida"
-            android:title="Número de Jugadores" />
-        <ListPreference
-            android:defaultValue="1"
-            android:entries="@array/tiposConexiones"
-            android:entryValues="@array/tiposConexionesValores"
-            android:key="conexion"
-            android:summary="Selecciona el tipo de conexion.."
-            android:title="Tipo de gráficos" />
+    </PreferenceCategory>
 
-
-    </PreferenceScreen>
+<PreferenceCategory
+android:key="Secundaria"
+android:title="Multijugador">
+<CheckBoxPreference
+    android:key="multijugador"
+    android:summary="Activar modo multijugador"
+    android:title="Multijugador" />
+<EditTextPreference
+    android:defaultValue="3"
+    android:inputType="number"
+    android:key="jugadores"
+    android:summary="Cuantos jugadores participan de la partida"
+    android:title="Número de Jugadores" />
+<ListPreference
+    android:defaultValue="1"
+    android:entries="@array/tiposConexiones"
+    android:entryValues="@array/tiposConexionesValores"
+    android:key="conexion"
+    android:summary="Selecciona el tipo de conexion.."
+    android:title="Tipo de gráficos" />
+</PreferenceCategory>
 </PreferenceScreen>
