--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,11 +4,13 @@
         <item>vectorial</item>
         <item>bitmap</item>
         <item>3D</item>
+        <item>VectorDrawable</item>
     </string-array>
     <string-array name="tiposGraficosValores">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
     <string-array name="tiposConexiones">
         <item>Bluetooth</item>
