Añadiendo puntuacion Menos XML

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,4 +22,27 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <string-array name="tiposAlmacenamiento">
+        <item>Array</item>
+        <item>Preferencias</item>
+        <item>Archivo</item>
+        <item>Archivo Externo</item>
+        <item>Raw</item>
+        <item>Asset</item>
+        <item>XML-SAX</item>
+        <item>Gson</item>
+    </string-array>
+    <string-array name="tiposAlmacenamientoValores">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        </string-array>
+
+
 </resources>
