Añadiendo puntuaciones SQLite

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -32,6 +32,8 @@
         <item>Asset</item>
         <item>XML-SAX</item>
         <item>Gson</item>
+        <item>Json</item>
+        <item>SQLite</item>
     </string-array>
     <string-array name="tiposAlmacenamientoValores">
         <item>0</item>
@@ -42,6 +44,8 @@
         <item>5</item>
         <item>6</item>
         <item>7</item>
+        <item>8</item>
+        <item>9</item>
         </string-array>
 
 
