--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -34,6 +34,7 @@
         <item>Gson</item>
         <item>Json</item>
         <item>SQLite</item>
+        <item>Provider</item>
     </string-array>
     <string-array name="tiposAlmacenamientoValores">
         <item>0</item>
@@ -46,6 +47,7 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
         </string-array>
 
 
